# MonumentsRecommendation

./: Dockerfile  README.md  docker-compose.yml  extensions.txt  pyproject.toml  requirements.txt  start.sh
.github/workflows/: cicd.yml
alembic/: env.py
alembic/versions/: f9b27529b129_initial_schema.py
app/: create_db.py  data.py  data_migration.py  database.py  main.py  models.py  recommend.py
docs/: mkdocs.yml
docs/docs/: api-reference.md  architecture.md  contributing.md  database.md  docker-setup.md  getting-started.md  index.md
notebooks/: recommendation.ipynb
tests/: test_recommend.py
