[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "monumentrecommendation"
version = "0.0.1"
description = "This is a rule based recommendation system for monuments"
authors = [
  { name = "Anoobee" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = "~=3.12.9"


[tool.ruff]
line-length = 99
src = ["monumentrecommendation"]
include = ["pyproject.toml", "monumentrecommendation/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["monumentrecommendation"]
force-sort-within-sections = true
